fix profile collapsing height issue

--- a/src/containers/Profile/Profile.scss
+++ b/src/containers/Profile/Profile.scss
@@ -19,6 +19,7 @@ html {
             display: flex;
             justify-content: space-between;
             margin-bottom: 50px;
+            min-height: 120px;
 
             .info {
               div {
